Feat : Auth 회원가입 기능 완료

--- a/4.fastapi/python/fastapi_memo/templates/index.html
+++ b/4.fastapi/python/fastapi_memo/templates/index.html
@@ -144,6 +144,23 @@
             };
             console.log( param2 );
 
+            // 2. 서버측에게 데이터 전송 => 회원가입 처리 요청(POST, /signup/)
+            fetch("/signup/",{
+                method : "POST",
+                headers: {
+                    "Content-Type" : "application/json"
+                },
+                body : JSON.stringify( param )
+            })
+            .then( res => res.json() )
+            .then( result => {
+                console.log( "가입 성공", result );
+            })
+            .catch( err => {
+                console.log("가입 실패", err);
+                alert("회원 가입 실패");
+            })
+
             return false;
         }
     </script>
